# BCXDart

./: .gitignore  .gitmodules  .gitmodules~  .travis.yml  README.md  force_remake_launch.sh  install_gazebo.sh  launch.sh  record.sh  setup.sh
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/piksi_multi/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/piksi_ros/: .rosinstall  setup.sh
catkin_ws/devel/include/piksi_ros/: CarrierPhase.h  Ephemeris.h  Obs.h  Observations.h  PiksiDriverConfig.h  Sid.h  SignalStatus.h
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  piksi_ros.pc
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/logs/piksi_multi/: build.cmake.000.log.stderr
catkin_ws/src/computer_vision/: .gitignore  ZED_install.sh
catkin_ws/src/computer_vision/computer_vision/: CMakeLists.txt  package.xml
catkin_ws/src/computer_vision/install_scripts/: ZED_install.sh  ZED_ros_wrapper.sh
catkin_ws/src/computer_vision/nn_node/: CMakeLists.txt  package.xml
catkin_ws/src/computer_vision/sample_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/computer_vision/visual_cone_detector/: CMakeLists.txt  package.xml
catkin_ws/src/control/control/: package.xml
catkin_ws/src/control/sample_pkg5/: CMakeLists.txt  package.xml
catkin_ws/src/controll/controll/: CMakeLists.txt  package.xml
catkin_ws/src/controll/sample_pkg5/: CMakeLists.txt  package.xml
catkin_ws/src/dart_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/dart_msgs/msg/: colors.msg  cone.msg  cone_list.msg  cv_cone.msg  cv_cone_list.msg  lidar_cone.msg  lidar_cone_list.msg  local_map.msg
catkin_ws/src/launch/: readme.md
catkin_ws/src/launch/launch/: launch.launch
catkin_ws/src/learning_image_geometry/: CMakeLists.txt  package.xml
catkin_ws/src/piksi_ros/: CMakeLists.txt
catkin_ws/src/piksi_ros/src/: piksi_driver.py
catkin_ws/src/sensor_fusion/armadillo/: README.txt
catkin_ws/src/sensor_fusion/camera_lidar_fusion/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/camera_lidar_fusion/launch/: start.launch
catkin_ws/src/sensor_fusion/camera_lidar_fusion/src/: camera_lidar_fusion_node.cpp  camera_lidar_fusion_visualization_node.cpp
catkin_ws/src/sensor_fusion/cone_sequencer/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/gazebo_laser_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/my_pcl_tutorial/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/sensor_fusion/: package.xml
catkin_ws/src/sensor_fusion/simulation2d/: CMakeLists.txt  package.xml
catkin_ws/src/sensor_fusion/simulation2d_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/sample_pkg4/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/simulation/: package.xml
catkin_ws/src/slam/sample_pkg2/: CMakeLists.txt  package.xml
catkin_ws/src/slam/slam/: package.xml
catkin_ws/src/trajectory/sample_pkg3/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory/trajectory/: CMakeLists.txt  package.xml
install_ros_on_px2/: install_ros.sh  link_to_installation_guide.txt
(+164 files in other folders)
