<?xml version="1.0"?>
<package format="2">
  <name>sensor_fusion</name>
  <version>0.0.0</version>
  <description>The sensor_fusion package</description>
  <maintainer email="magnus@todo.todo">magnus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
   <metapackage />
  </export>
</package>
